[package]
name = "idk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
comfy-table = "6.1.3"
derive_more = "0.99.17"
itertools = "0.10.5"
lalrpop-util = { version = "0.19.8", features = ["lexer"] }
miette = { version = "5.5.0", features = ["fancy"] }
once_cell = "1.16.0"
thiserror = "1.0.37"
z3 = { version = "0.11.2", features = ["static-link-z3"] }

[build-dependencies]
lalrpop = { version = "0.19.8", features = ["lexer"] }
